# Terminal-Chess

./: .gitignore  CMakeLists.txt  README.md  architecture.txt  build.sh  main.cpp  setup.sh
assets/: creadits.txt  credits.txt  creditsBanner.txt  difficultyMenu.txt  difficultyMenuBanner.txt  difficultyOptions.txt  errorBanner.txt  errorHeading.txt  farewell.txt  farewellBanner.txt  footer.txt  footerLeft.txt  gameModeMenu.txt  gameModeMenuBanner.txt  gameOver.txt  gameOverBanner.txt  gitHubBox.txt  header.txt  headerLeft.txt  headerRight.txt  helpMenu.txt  helpMenuBanner.txt  mainMenu.txt  mainMenuBanner.txt  userInputDivisor.txt  userInputSeparator.txt  welcomeHeading.txt
docs/: GuiArchitecture.md  TODO.txt  credits.md  fancyText.md  gameStates.md  resources.md  scenes.md
include/: application.hpp  chessBoard.hpp  chessLibrary.hpp  chessPieces.hpp  displayer.hpp  element.hpp  event.hpp  eventExecuter.hpp  eventHandler.hpp  exception.hpp  flowControl.hpp  flowControll.hpp  formatter.hpp  gameHandler.hpp  globals.hpp  gui.hpp  inputHandler.hpp  scene.hpp  tool.hpp  validator.hpp  window.hpp
lib/: LICENSE
src/: application.cpp  chessLibrary.cpp  displayer.cpp  element.cpp  event.cpp  eventHandler.cpp  exception.cpp  flowControl.cpp  formatter.cpp  gameHandler.cpp  globals.cpp  gui.cpp  inputHandler.cpp  scene.cpp  terminalChess.cpp  validator.cpp  window.cpp
tool/: tool.cpp
